# eve2ev

./: .env.capacitor.example  .env.example  .env.mcp.example  .gitignore  .mcp.json  MCP_SETUP.md  MOBILE_APP.md  capacitor.config.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts
charging-platform/: .gitignore  fetch_osm.py  load_osm.py  reverse_geocode.py  sync_states.py
e2e/: auth.spec.ts  fixtures.ts  home.spec.ts  mobile-nav.spec.ts  pwa.spec.ts  route-planner.spec.ts  search.spec.ts
etl/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
etl/config/: config.yaml
etl/docs/: architecture.md  folder-structure.md
etl/sql/: schema_postgis.sql  schema_sqlite.sql
etl/src/osm_india_etl/: __init__.py  cli.py  config.py  constants.py  download.py  extract.py  load.py  logging_setup.py  models.py
etl/src/osm_india_etl/api/: __init__.py  app.py  deps.py  schemas.py
etl/src/osm_india_etl/exporters/: __init__.py  geojson.py  tabular.py
etl/src/osm_india_etl/pipeline/: __init__.py  checkpoint.py  orchestrator.py
etl/src/osm_india_etl/search/: __init__.py  engine.py  fts.py  fuzzy.py  phonetic.py
etl/src/osm_india_etl/transform/: __init__.py  aliases.py  dedupe.py  geometry.py  hierarchy.py  normalize.py  pipeline.py
etl/tests/: test_api.py  test_cli.py  test_download.py  test_extract.py  test_extract_osmium.py  test_load.py  test_search.py  test_transform.py
public/: manifest.json  sw.js
scripts/: generate-icons.mjs
src/: proxy.ts
src/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
src/app/account/: page.tsx
src/app/blog/: page.tsx
src/app/forgot-password/: page.tsx
src/app/login/: page.tsx
src/app/offline/: page.tsx
src/app/register/: page.tsx
src/app/route-planner/: page.tsx
src/app/search/: page.tsx
src/components/layout/: Footer.tsx  Header.tsx  MobileNav.tsx
src/hooks/: useStations.ts
src/lib/: store.ts  utils.ts
supabase/: schema.sql
supabase/migrations/: 002_stations_core.sql  003_functions.sql  004_city_aliases_seed.sql
(+27 files in other folders)
