[project]
name = "osm-india-etl"
version = "1.0.0"
description = "Production-grade ETL that downloads, processes, and imports complete OpenStreetMap data for India into a queryable location database."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Ev2Ev Data Platform" }]
keywords = ["openstreetmap", "osm", "india", "etl", "geospatial", "postgis", "geocoding"]

dependencies = [
    # HTTP / async download
    "requests>=2.32",
    "httpx>=0.27",
    "aiohttp>=3.10",
    "aiofiles>=24.1",
    # OSM parsing
    "osmium>=3.7",              # pyosmium
    # Dataframes / columnar
    "polars>=1.9",
    "pandas>=2.2",
    "pyarrow>=17.0",
    "duckdb>=1.1",
    # Geospatial
    "geopandas>=1.0",
    "shapely>=2.0",
    # Databases
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "geoalchemy2>=0.15",
    # Search / fuzzy / phonetic
    "rapidfuzz>=3.10",
    "jellyfish>=1.1",
    "unidecode>=1.3",
    "python-slugify>=8.0",
    # API
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    # CLI / logging / config
    "typer>=0.12",
    "rich>=13.9",
    "loguru>=0.7",
    "pyyaml>=6.0",
    "psutil>=6.1",
    "tenacity>=9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "mypy>=1.13",
    "types-PyYAML",
    "types-requests",
]

[project.scripts]
osm-india-etl = "osm_india_etl.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/osm_india_etl"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]
ignore = ["E501"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra -q"

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
ignore_missing_imports = true
mypy_path = "src"
